update github info

--- a/yam-app/yam-app.cabal
+++ b/yam-app/yam-app.cabal
@@ -2,7 +2,7 @@ name:                yam-app
 version:             0.1.6
 synopsis:            Yam App
 description:         Base Module for Yam
-homepage:            https://github.com/leptonyu/yam/yam-app#readme
+homepage:            https://github.com/leptonyu/yam/tree/master/yam-app#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Daniel YU
@@ -52,4 +52,4 @@ library
 
 source-repository head
   type:     git
-  location: https://github.com/leptonyu/yam-app
+  location: https://github.com/leptonyu/yam
