--- a/yam-job/yam-job.cabal
+++ b/yam-job/yam-job.cabal
@@ -1,7 +1,7 @@
 name:                yam-job
 version:             0.1.6
 description:         Job Module for Yam
-homepage:            https://github.com/leptonyu/yam/yam-job#readme
+homepage:            https://github.com/leptonyu/yam/tree/master/yam-job#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Daniel YU
@@ -22,4 +22,4 @@ library
 
 source-repository head
   type:     git
-  location: https://github.com/leptonyu/yam-job
+  location: https://github.com/leptonyu/yam
