--- a/yam-app/yam-app.cabal
+++ b/yam-app/yam-app.cabal
@@ -1,5 +1,5 @@
 name:                yam-app
-version:             0.1.6
+version:             0.1.8
 synopsis:            Yam App
 description:         Base Module for Yam
 homepage:            https://github.com/leptonyu/yam/tree/master/yam-app#readme
@@ -19,8 +19,6 @@ library
                      , Yam.Import
                      , Yam.Transaction
                      , Yam.Transaction.Sqlite
-                     , Yam.Logger.MonadLogger
-                     , Yam.Logger.WaiLogger
                      , Yam.Event
                      , Yam.Logger
                      , Yam.Prop
@@ -48,6 +46,7 @@ library
                      , persistent-sqlite
                      , conduit
                      , resourcet
+                     , mtl
   default-language:    Haskell2010
 
 source-repository head
