--- a/yam-servant/yam-servant.cabal
+++ b/yam-servant/yam-servant.cabal
@@ -1,5 +1,5 @@
 name:                yam-servant
-version:             0.1.6
+version:             0.1.8
 description:         Web Module for Yam
 homepage:            https://github.com/leptonyu/yam/tree/master/yam-app#readme
 license:             BSD3
@@ -27,7 +27,9 @@ library
                      , wai-extra
                      , warp
                      , aeson
+                     , text
                      , lens
+                     , http-types
   default-language:    Haskell2010
 
 source-repository head
