--- a/yam-app/yam-app.cabal
+++ b/yam-app/yam-app.cabal
@@ -1,5 +1,5 @@
 name:                yam-app
-version:             0.1.11
+version:             0.1.13
 synopsis:            Yam App
 description:         Base Module for Yam
 homepage:            https://github.com/leptonyu/yam/tree/master/yam-app#readme
@@ -47,6 +47,7 @@ library
                      , conduit
                      , resourcet
                      , mtl
+                     , unliftio-core
   default-language:    Haskell2010
 
 source-repository head
