--- a/yam-transaction-postgresql/yam-transaction-postgresql.cabal
+++ b/yam-transaction-postgresql/yam-transaction-postgresql.cabal
@@ -1,5 +1,5 @@
 name:                yam-transaction-postgresql
-version:             0.1.11
+version:             0.1.13
 description:         Transaction Postgresql Plugin
 homepage:            https://github.com/leptonyu/yam/tree/master/yam-transaction-postgresql#readme
 license:             BSD3
@@ -19,6 +19,7 @@ library
                      , yam-app
                      , containers
                      , persistent-postgresql
+                     , unliftio-core
   default-language:    Haskell2010
 
 source-repository head
