--- a/yam-transaction/yam-transaction.cabal
+++ b/yam-transaction/yam-transaction.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6def6dd9fe17328845964dda2df00487cc043b42d6e8c6e5432aae9a2ad181ba
+-- hash: e4ca05165e61fba8244e0de1ff8545778e51dc047824a8acde49d08c17ffcd87
 
 name:           yam-transaction
 version:        0.3.0
@@ -39,11 +39,16 @@ library
     , base >=4.7 && <5
     , conduit
     , data-default
+    , monad-logger
+    , mtl
     , persistent
     , persistent-postgresql
     , persistent-sqlite
     , resourcet
+    , string-conversions
     , text
     , time
+    , transformers
     , unliftio-core
+    , yam-logger
   default-language: Haskell2010
