--- a/yam-web/package.yaml
+++ b/yam-web/package.yaml
@@ -1,5 +1,5 @@
 name: yam-web
-version: 0.3.0
+version: 0.3.1
 synopsis: Yam Web
 description: base web module for yam
 maintainer: Daniel YU <leptonyu@gmail.com>
@@ -37,7 +37,7 @@ library:
   source-dirs: src
   exposed-modules:
     - Yam.Web
-  exposed-modules:
+  other-modules:
     - Yam.Web.Swagger
     - Yam.Web.Internal
     - Yam.Web.Middleware
