--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
 name:                yam
 version:             0.4.0
-#synopsis:
+synopsis:            Yam Web
 #description:
 homepage:            https://github.com/leptonyu/yam#readme
 license:             BSD3
