--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -242,5 +242,6 @@ language_extensions:
   - TypeOperators
   - TypeSynonymInstances
   - ViewPatterns
+  - ImplicitParams
   # - TemplateHaskell
   # - QuasiQuotes
