--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@
 # Use new container infrastructure to enable caching
 sudo: enabled
 
+cache:
+  directories:
+  - $HOME/.stack
+
 # Do not choose a language; we provide our own build tools.
 language: haskell
 
