--- a/yam/package.yaml
+++ b/yam/package.yaml
@@ -18,6 +18,8 @@ dependencies:
   - bytestring
   - aeson
   - mtl
+  - unliftio-core
+  - lens
   - reflection
   - data-default
   - vault
@@ -26,9 +28,11 @@ dependencies:
   - fast-logger
   - wai
   - warp
+  - http-types
   - servant-server
   - servant-swagger
   - servant-swagger-ui
+  - swagger2
   - salak
 
 library:
@@ -36,6 +40,7 @@ library:
   exposed-modules:
     - Yam
     - Yam.Internal
+    - Yam.Auth
   other-modules:
     - Yam.Types
     - Yam.Logger
