--- a/yam/package.yaml
+++ b/yam/package.yaml
@@ -14,6 +14,7 @@ extra-source-files:
 
 dependencies:
   - base >= 4.11 && < 5
+  - salak >= 0.1.4 && < 0.3
   - text
   - bytestring
   - aeson
@@ -36,7 +37,6 @@ dependencies:
   - servant-swagger
   - servant-swagger-ui
   - swagger2
-  - salak
 
 library:
   source-dirs: src
