--- a/yam/yam.cabal
+++ b/yam/yam.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d275d072de05594ff2e316c2970c4be8a71350274a349710b7529bd4ce3b2f67
+-- hash: be330b92d80ea701c4b50a741fbddb53f2ad6661fed89df7bd4136c71f1f914b
 
 name:           yam
 version:        0.5.7
@@ -26,6 +26,7 @@ library
       Yam
       Yam.Internal
       Yam.Middleware
+      Yam.Middleware.Default
       Yam.Middleware.Auth
       Yam.Middleware.Trace
       Yam.Swagger
@@ -62,11 +63,11 @@ library
     , servant-swagger-ui
     , swagger2
     , text
-    , time
     , unliftio-core
     , unordered-containers
     , vault
     , wai
+    , wai-extra
     , warp
   default-language: Haskell2010
 
@@ -83,6 +84,7 @@ test-suite spec
       Yam.Logger
       Yam.Middleware
       Yam.Middleware.Auth
+      Yam.Middleware.Default
       Yam.Middleware.Trace
       Yam.Swagger
       Yam.Types
@@ -116,10 +118,10 @@ test-suite spec
     , servant-swagger-ui
     , swagger2
     , text
-    , time
     , unliftio-core
     , unordered-containers
     , vault
     , wai
+    , wai-extra
     , warp
   default-language: Haskell2010
